--- a/hugo/data/experience.yaml
+++ b/hugo/data/experience.yaml
@@ -2,24 +2,31 @@
   roles:
     - role: CTO / Co-Founder
       date: Dec 2022 -  Present
+      tools: SQLite, InfluxDB, Ansible, Terraform, Kubernetes
       details: |
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare sollicitudin fringilla.
-        Aenean nec volutpat arcu. Maecenas quis tempus risus. Curabitur condimentum ligula in erat pharetra porta. 
-        Nam suscipit nisi a bibendum lacinia. Donec aliquet, nibh dignissim placerat efficit
+        Self-hosted, independent network and infrastructure service provider for the Cardano blockchain network and associated ecosystem projects.
+        - Architected a CI/CD build pipeline for containerized application binaries on both x86_64 and ARMv8-A processors
+        - Automated the provisioning of highly available infrastrcture using proxmox, Terraform, Ansible and K3S, *reducing overall recovery time objectives*
+        - Deployed monitoring and alerting solutions with Grafana and Prometheus, *reducing incident detection times from hours to minutes*
 
 - company: myKaarma
   page: 1
   roles: 
     - role: Data Engineer
       tools: Python, SQL, Flink, Kafka, AirFlow, Java, Redshift
-      date: July 2023 - Jan 2024
+      date: Jul 2023 - Jan 2024
       details: |
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare sollicitudin fringilla.
-        Aenean nec volutpat arcu. Maecenas quis tempus risus.
-    
+        Data Engineer at an automotive PaaS company, transitioning the company's data warehouse architecture to a modern lakehouse aimed at scalability and real-time, self-service analytics.
+        - Collaborated with cross-functional teams to design and deploy a data lakehouse architecture on AWS, incrementally replacing the legacy production data warehouse
+        - Developed and deployed big data processing jobs using Python and AWS Glue, *reducing query times on large datasets by 70%* compared to SQL stored procedures on the data warehouse
+        - Automated customer report generation and delivery using AWS State Machines and Lambda functions, with SLA guarantees, *reducing late report delivery incidents by 99%*
+        
     - role: Data Analyst
-      tools: Python, SQL, MariaDB
-      date: Feb 2022 - July 2023
+      date: Feb 2022 - Jul 2023
+      tools: Python, SQL, PowerBI
       details: |
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare sollicitudin fringilla.
-        Aenean nec volutpat arcu. Maecenas quis tempus risus.
+        Data Analyst tasked with requirements gathering, report generation and automation, for business clients and internal stakeholders.
+        - Developed data products and reports for *over 500 business clients* 
+        - Enabled simple self-service analytics through integration of limited data sources with Power BI, *reducing ad-hoc report requests by 10%*
+        - Provided quarterly KPI reports for internal stakeholder meetings, driving insights for key areas of service improvement
+        - Spearheaded a proof-of-concept initiative for stream data processing and reporting using Kafka, Flink, Airflow, AWS S3 and AWS Redshift
