(hugo) update css format for more compact content

--- a/hugo/data/education.yaml
+++ b/hugo/data/education.yaml
@@ -1,4 +1,4 @@
-- name: BASc Mechanical Engineering
+- name: Bsc. Mechanical Engineering
   university: University of Waterloo
   location: Waterloo, ON
   date: 2015- 2020
