--- a/hugo/data/experience.yaml
+++ b/hugo/data/experience.yaml
@@ -1,32 +1,31 @@
 - company: Mochi
   roles:
-    - role: CTO / Co-Founder
+    - role: DevOps Engineer
       date: Dec 2022 -  Present
       tools: SQLite, InfluxDB, Ansible, Terraform, Kubernetes
       details: |
         Self-hosted, independent network and infrastructure service provider for the Cardano blockchain network and associated ecosystem projects.
-        - Architected a CI/CD build pipeline for containerized application binaries on both x86_64 and ARMv8-A processors
-        - Automated the provisioning of highly available infrastrcture using proxmox, Terraform, Ansible and K3S, *reducing overall recovery time objectives*
-        - Deployed monitoring and alerting solutions with Grafana and Prometheus, *reducing incident detection times from hours to minutes*
+        - Architected a CI/CD build pipeline for containerized application binaries on both x86_64 and ARMv8-A processors.
+        - Automated the provisioning of highly available infrastrcture using proxmox, Terraform, Ansible and K3S, *reducing overall recovery time objectives*.
+        - *Reduced Mean Time To Resolution (MTTR) by 60%* through deploying comprehensive monitoring solutions using Grafana and Prometheus, resulting in faster issue resolution and increased service availability.
 
 - company: myKaarma
   page: 1
-  roles: 
+  roles:
     - role: Data Engineer
-      tools: Python, SQL, Flink, Kafka, AirFlow, Java, Redshift
+      tools: Python, SQL, Flink, Kafka, AirFlow, Redshift
       date: Jul 2023 - Jan 2024
       details: |
         Data Engineer at an automotive PaaS company, transitioning the company's data warehouse architecture to a modern lakehouse aimed at scalability and real-time, self-service analytics.
-        - Collaborated with cross-functional teams to design and deploy a data lakehouse architecture on AWS, incrementally replacing the legacy production data warehouse
-        - Developed and deployed big data processing jobs using Python and AWS Glue, *reducing query times on large datasets by 70%* compared to SQL stored procedures on the data warehouse
-        - Automated customer report generation and delivery using AWS State Machines and Lambda functions, with SLA guarantees, *reducing late report delivery incidents by 99%*
-        
+        - Collaborated with cross-functional teams to design and deploy a data lakehouse architecture on AWS, incrementally replacing the legacy production data warehouse.
+        - Developed and deployed big data processing jobs using Python and AWS Glue, *reducing query times on large datasets by 70%* compared to SQL stored procedures on the data warehouse.
+        - Automated customer report generation and delivery using AWS State Machines and Lambda functions, with SLA guarantees, *reducing late report delivery incidents by 99%*.
+
     - role: Data Analyst
       date: Feb 2022 - Jul 2023
       tools: Python, SQL, PowerBI
       details: |
         Data Analyst tasked with requirements gathering, report generation and automation, for business clients and internal stakeholders.
-        - Developed data products and reports for *over 500 business clients* 
-        - Enabled simple self-service analytics through integration of limited data sources with Power BI, *reducing ad-hoc report requests by 10%*
-        - Provided quarterly KPI reports for internal stakeholder meetings, driving insights for key areas of service improvement
-        - Spearheaded a proof-of-concept initiative for stream data processing and reporting using Kafka, Flink, Airflow, AWS S3 and AWS Redshift
+        - Developed data products and reports for *over 500 business clients*.
+        - Enabled simple self-service analytics through integration of limited data sources with Power BI, *reducing ad-hoc report requests by 10%*.
+        - Spearheaded a proof-of-concept initiative for stream data processing and reporting using Kafka, Flink, Airflow, AWS S3 and AWS Redshift.
