update(hugo): include UC Berkeley education - update github workflow

--- a/hugo/data/education.yaml
+++ b/hugo/data/education.yaml
@@ -1,4 +1,8 @@
+- name: Accreditation in CS (DSA)
+  university: UC Berkeley
+  location: California, USA
+  date: 2025 - 2025
 - name: Bsc. Mechanical Engineering
   university: University of Waterloo
   location: Waterloo, ON
-  date: 2015- 2020
+  date: 2015 - 2020
