--- a/hugo/data/features.yaml
+++ b/hugo/data/features.yaml
@@ -1,6 +1,6 @@
 about:
   name: Reza Rajan
-  tagline: Data Engineer - AWS Specialization
+  tagline: Software Engineer - Data Systems
   phone: "1-407-649-0447"
   email: rezarajan@gmail.com
   links:
